2003-05-05 15:28  Alexander Malmberg <alexander@malmberg.org>

	* Source/Unicode.m (GSFromUnicode, GSToUnicode): Make sure the
	internal work buffer isn't returned to the caller.

	* Source/NSString.m: Clarify some comments, and mark code that is
	broken when defEnc!=intEnc.

	(fillHole, makeHole): Remove STABLE_MEMCPY. Use memmove.

	(transmute): Set the zone to the default zone when transmuting.
	Check the return value from GSToUnicode.

	(getCharacters_c): Check the return value from GSToUnicode.

2003-05-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: ([dispatch]) catch exceptions handling the port
	message, so as to ensure that locking won't get out of sync.

Mon Apr 28 12:09:44 BST 2003  Nicola Pero  <nicola@brainstorm.co.uk>

	* NSCharacterSets/GNUmakefile (base-resources_RESOURCE_FILES_INSTALL_DIR): 
	Define using the full relative path.
	* Resources/GNUmakefile (base-resources_RESOURCE_FILES_INSTALL_DIR): Idem.
	
2003-04-27  Adam Fedor  <fedor@gnu.org>

	* Updates for filesystem change.
	* GNUmakefile (GNUSTEP_MAKEFILES): Remove
	* Documentation/GNUmakefile, Examples/GNUmakefile,
	NSTimeZones/GNUmakefile, SSL/GNUmakefile, SSL/configure.ac,
	Source/DocMakefile, Source/GNUmakefile,
	Source/Additions/GNUmakefile, Testing/GNUmakefile,
	Tools/GNUmakefile: Idem.
	* configure.ac: Replace $GNUSTEP_SYSTEM_ROOT/Makefiles with
	$GNUSTEP_MAKEFILES.  Replace Libraries with Library/Libraries.
	Replace Headers with Library/Headers.
	* Source/mframe/configure.ac: Idem.
	* NSCharacterSets/GNUmakefile: Use resource-set.make.
	* Resources/GNUmakefile: Idem.
	* Resources/GNUmakefile.postamble: Remove before/after install cmds.

	* Source/NSBundle (+pathForLibraryResource:ofType:inDirectory:): 
	New method.
	(+pathForGNUstepResource:...): Depreciate.
	* Source/Additions/GSXML.m: Use it to find DTDs.

	* Source/GSLocale.m (GSLanguageFromLocale): Use +bundleForLibrary
	to locate resources.
	* Source/NSCharacterSet.m (+_bitmapForSet:number:): Idem.